[bdist_wheel]
universal = 0

[metadata]
name = rt
description = Python interface to Request Tracker API
long_description = file: README.rst
long_description_content_type = text/x-rst
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE
author = Georges Toth
author_email = georges.toth@govcert.etat.lu
url = https://github.com/python-rt/python-rt
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
packages = rt
include_package_data = True
python_requires = >= 3.7
install_requires =
    requests

[options.packages.find]
exclude =
    tests

[options.package_data]
rt = py.typed

[options.extras_require]
docs =
    sphinx
    sphinx-autodoc-typehints
    sphinx-rtd-theme
dev =
    pycodestyle
    pylint
    mypy
    flake8
    flake8-bandit
    flake8-comprehensions
    flake8-docstrings
    pep8-naming
    types-requests
    codespell
test =
    pytest
    coverage


[pycodestyle]
filename = rt/rt.py
ignore = E501, W503, E124, E126


[flake8]
max-line-length = 240
ignore = D210, D400, W503, D205, D209, D401, E126, E124
